// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Paseo Asset Hub Nomination Pools > nomination pool creation with insufficient funds > create nomination pool with insufficient funds events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x08000000",
          "index": 80,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 18000)",
          "refTime": "(rounded 3000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Paseo Asset Hub Nomination Pools > nomination pool double join test: an account can only ever be in one pool at a time > join nomination pool events 1`] = `[]`;

exports[`Paseo Asset Hub Nomination Pools > nomination pool global config test > setting global nomination pool configs with signed origin 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 9800)",
          "refTime": "(rounded 1100000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Paseo Asset Hub Nomination Pools > nomination pool global config test > system events 1`] = `[]`;

exports[`Paseo Asset Hub Nomination Pools > nomination pool lifecycle test > create nomination pool events 1`] = `[]`;

exports[`Paseo Asset Hub Nomination Pools > nomination pool metadata test > create nomination pool events 1`] = `[]`;

exports[`Paseo Asset Hub Nomination Pools > nomination pool metadata test > set metadata events 1`] = `[]`;
